--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "body": "^5.1.0",
-    "express": "^4.17.0",
+    "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.16.1",
+    "express-stormpath": "^4.0.0",
     "mysql2": "^1.6.5",
     "parser": "^0.1.4",
     "passport": "^0.4.0",
